// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSetting should render 1`] = `
<styled.div>
  <styled.label />
  <styled.div>
    #000000
  </styled.div>
  <styled.div
    color="#000000"
    focus={false}
    onClick={[Function]}
  />
</styled.div>
`;

exports[`ColorSetting when an initial color does not start with a # should add a hash (#) before the hex code 1`] = `
<styled.div>
  <styled.label />
  <styled.div>
    #FFFFFF
  </styled.div>
  <styled.div
    color="#FFFFFF"
    focus={false}
    onClick={[Function]}
  />
</styled.div>
`;

exports[`ColorSetting when an initial color is provided should render and match ColorText box 1`] = `
<styled.div>
  <styled.label />
  <styled.div>
    #FFFFFF
  </styled.div>
  <styled.div
    color="#FFFFFF"
    focus={false}
    onClick={[Function]}
  />
</styled.div>
`;
